fix layout bug

--- a/src/app/layout/layout.component.css
+++ b/src/app/layout/layout.component.css
@@ -19,5 +19,4 @@
     height: 100%;
     padding-inline: 3rem;
     margin-top: 72px;
-    z-index: -1
 }
